crates/pg_syntax/tests/snapshots/postgres_regress/write_parallel@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create unique index on parallel_mat_view(length);
---
IndexStmt@0..49
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  On@20..22 "on"
  Whitespace@22..23 " "
  RangeVar@23..40
    Ident@23..40 "parallel_mat_view"
  Ascii40@40..41 "("
  IndexElem@41..47
    Ident@41..47 "length"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

