crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE SCHEMA testxmlschema;
---
CreateSchemaStmt@0..28
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Schema@7..13 "SCHEMA"
  Whitespace@13..14 " "
  Ident@14..27 "testxmlschema"
  Ascii59@27..28 ";"

