crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT table_to_xml('testxmlschema.test1', false, true, '');"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..19 "table_to_xml"
      Ascii40@19..20 "("
      AConst@20..41
        Sconst@20..41 "'testxmlschema.test1'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..48
        FalseP@43..48 "false"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..54
        TrueP@50..54 "true"
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      AConst@56..58
        Sconst@56..58 "''"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

