crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT table_to_xmlschema('testxmlschema.test1', true, true, '');"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..25 "table_to_xmlschema"
      Ascii40@25..26 "("
      AConst@26..47
        Sconst@26..47 "'testxmlschema.test1'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..53
        TrueP@49..53 "true"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..59
        TrueP@55..59 "true"
      Ascii44@59..60 ","
      Whitespace@60..61 " "
      AConst@61..63
        Sconst@61..63 "''"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

